--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
     "axios": "^0.21.0",
+    "formik": "^2.2.5",
     "native-base": "^2.13.14",
     "qs": "^6.9.4",
     "react": "16.13.1",
