--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.9.2",
     "@react-navigation/material-top-tabs": "^5.3.9",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
@@ -22,8 +23,8 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-dotenv": "^2.4.2",
-    "react-native-dropdown-picker": "^3.7.1",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-popup-menu": "^0.15.9",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
