--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.63.3",
     "react-native-dotenv": "^2.4.2",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-picker": "^2.3.4",
     "react-native-popup-menu": "^0.15.9",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.13.2",
