--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,12 +3,12 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 
-target 'chatapp' do
+target 'WeTalk' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
 
-  target 'chatappTests' do
+  target 'WeTalkTests' do
     inherit! :complete
     # Pods for testing
   end
@@ -23,10 +23,10 @@ target 'chatapp' do
   end
 end
 
-target 'chatapp-tvOS' do
-  # Pods for chatapp-tvOS
+target 'WeTalk-tvOS' do
+  # Pods for WeTalk-tvOS
 
-  target 'chatapp-tvOSTests' do
+  target 'WeTalk-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
