--- a/ios/WeTalk.xcodeproj/xcshareddata/xcschemes/WeTalk.xcscheme
+++ b/ios/WeTalk.xcodeproj/xcshareddata/xcschemes/WeTalk.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "chatapp-tvOS.app"
-               BlueprintName = "chatapp-tvOS"
-               ReferencedContainer = "container:chatapp.xcodeproj">
+               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+               BuildableName = "WeTalk.app"
+               BlueprintName = "WeTalk"
+               ReferencedContainer = "container:WeTalk.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "chatapp-tvOSTests.xctest"
-               BlueprintName = "chatapp-tvOSTests"
-               ReferencedContainer = "container:chatapp.xcodeproj">
+               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
+               BuildableName = "WeTalkTests.xctest"
+               BlueprintName = "WeTalkTests"
+               ReferencedContainer = "container:WeTalk.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -54,10 +54,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "chatapp-tvOS.app"
-            BlueprintName = "chatapp-tvOS"
-            ReferencedContainer = "container:chatapp.xcodeproj">
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "WeTalk.app"
+            BlueprintName = "WeTalk"
+            ReferencedContainer = "container:WeTalk.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -71,10 +71,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "chatapp-tvOS.app"
-            BlueprintName = "chatapp-tvOS"
-            ReferencedContainer = "container:chatapp.xcodeproj">
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "WeTalk.app"
+            BlueprintName = "WeTalk"
+            ReferencedContainer = "container:WeTalk.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
