--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "qs": "^6.9.4",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-bootsplash": "^3.1.1",
     "react-native-dotenv": "^2.4.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-picker": "^2.3.4",
