--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.2",
+    "socket.io-client": "^3.0.3",
     "yup": "^0.30.0"
   },
   "devDependencies": {
