--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-dotenv": "^2.4.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-picker": "^2.3.4",
+    "react-native-modals": "^0.19.9",
     "react-native-popup-menu": "^0.15.9",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.13.2",
