--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-image-picker": "^2.3.4",
     "react-native-modals": "^0.19.9",
     "react-native-popup-menu": "^0.15.9",
+    "react-native-push-notification": "^6.1.3",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
